# sky-miner

./: .gitignore  Makefile  README.md  project.godot
.godot/: global_script_class_cache.cfg  scene_groups_cache.cfg
.godot/editor/: editor_layout.cfg  editor_script_doc_cache.res  filesystem_cache10  project_metadata.cfg
.godot/imported/: binoculars.png-09bf1e7144b9b37c71a659987a01c052.ctex  binoculars.png-09bf1e7144b9b37c71a659987a01c052.md5  harpoon.png-67e59fc6724b87db865a0e4013df2b2c.ctex  harpoon.png-67e59fc6724b87db865a0e4013df2b2c.md5  pickaxe.png-659b139be1fb7e03382dadc07048ec58.ctex  (+7 more)
assets/: tilemap.aseprite
docs/: todo.md
godot/: project.godot
levels/: world.tscn
rust/: Cargo.toml  Makefile
rust/src/: lib.rs
rust/src/core/: battle_manager.rs  consts.rs  logging.rs  macros.rs  mod.rs  test.rs  utils.rs
rust/src/core/battle_fsm/: enemy_turn.rs  initial.rs  mod.rs  player_turn.rs
rust/src/entities/: mod.rs  player.rs
rust/src/entities/player/: config.rs  constants.rs  consts.rs  fall.rs  idle.rs  jump.rs  land.rs  macros.rs  mod.rs  node_interface.rs  player_fsm_node.rs  run.rs
rust/src/entities/player_fsm/: constants.rs  idle.rs  jump.rs  land.rs  macros.rs  mod.rs  player_fsm_node.rs  run.rs
rust/src/map/: consts.rs  generator.rs  macros.rs  mod.rs  node_interface.rs  tile.rs
rust/src/terrain/: chunk_generator.rs  config.rs  consts.rs  generator.rs  io_handler.rs  macros.rs  mod.rs  node_interface.rs  tile_generator.rs
rust/src/ui/: debug.rs
scripts/: state.gd  state_machine.gd  state_machine.gd.uid
ui/: ui.gd  ui.tscn
(+93 files in other folders)
