[package]
name = "sky_miner"
version = "0.1.0"  # You can leave version and edition as-is for now.
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = "0.5.2"
enum_dispatch = "0.3"
noise = "0.9.0"
rand = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
